# libbot

./: MANIFEST.in  README.rst  pyproject.toml
.github/workflows/: apisec-scan.yml  bandit.yml  codeql.yml
bot/: __init__.py  __main__.py  all.py  brk.py  brokers.py  censors.py  cfg.py  client.py  clients.py  clt.py  config.py  configs.py  default.py  define.py  defines.py  dsk.py  err.py  error.py  errored.py  errors.py  event.py  events.py  evt.py  find.py  finding.py  fnc.py  fnd.py  func.py  handle.py  handler.py  hdl.py  locate.py  locator.py  message.py  method.py  methods.py  obj.py  objects.py  parse.py  parsers.py  (+24 more)
bot/mod/: cmd.py  fnd.py  irc.py  log.py  rss.py  sts.py  tdo.py  thr.py
bot/mods/: rss.py  tdo.py  usr.py
bot/module/: log.py  sts.py  tdo.py  thr.py  udp.py
bot/modules/: __init__.py  cmd.py  dbg.py  err.py  fnd.py  irc.py  log.py  man.py  mre.py  rss.py  sts.py  tdo.py  thr.py
botmod/: log.py
mods/: __init__.py  cmd.py  err.py  fnd.py  log.py  mbx.py  mdl.py  rst.py  shp.py  tmr.py  udp.py  wsh.py
mods2/: mbx.py  mdl.py  tdo.py  udp.py
modules/: cmd.py  irc.py  mbx.py  thr.py  udp.py  wsh.py
test/: __init__.py  test_composite.py  test_detect.py  test_json.py  test_mixin.py  test_none.py  test_object.py
tests/: test_composite.py  test_interface.py  test_json.py  test_object.py
